objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>br_MGS_Produtos__c</fullName>
        <description>Todos os Principais Produtos</description>
        <label>Itens</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>br_Linha_de_Venda__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acessórios</fullName>
                </value>
                <value>
                    <fullName>Alinhamento Cardan</fullName>
                </value>
                <value>
                    <fullName>Alinhamento de Eixo</fullName>
                </value>
                <value>
                    <fullName>Alinhamento de Polia</fullName>
                </value>
                <value>
                    <fullName>ALL-TEST Pro 34</fullName>
                </value>
                <value>
                    <fullName>ALL-TEST Pro 5</fullName>
                </value>
                <value>
                    <fullName>ALL-TEST Pro 7</fullName>
                </value>
                <value>
                    <fullName>ALL-TEST Pro 7 Professional</fullName>
                </value>
                <value>
                    <fullName>ALL-TEST Pro OL II</fullName>
                </value>
                <value>
                    <fullName>Balanceamento</fullName>
                </value>
                <value>
                    <fullName>Calibração</fullName>
                </value>
                <value>
                    <fullName>Cartucho e Bateria 60ml</fullName>
                </value>
                <value>
                    <fullName>Cartucho e Bateria 150ml</fullName>
                </value>
                <value>
                    <fullName>Cartucho e Bateria 250ml</fullName>
                </value>
                <value>
                    <fullName>Centralign</fullName>
                </value>
                <value>
                    <fullName>Comissionamento de Máquina</fullName>
                </value>
                <value>
                    <fullName>Contrato - Análise Remota</fullName>
                </value>
                <value>
                    <fullName>Contrato - Monitoramento/Diagnóstico</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>Easylube Elite 60ml</fullName>
                </value>
                <value>
                    <fullName>Easylube Elite 150ml</fullName>
                </value>
                <value>
                    <fullName>Easylube Elite 250ml</fullName>
                </value>
                <value>
                    <fullName>Easylube RFID 60ml</fullName>
                </value>
                <value>
                    <fullName>Easylube RFID 150ml</fullName>
                </value>
                <value>
                    <fullName>Easylube RFID 250ml</fullName>
                </value>
                <value>
                    <fullName>ESA</fullName>
                </value>
                <value>
                    <fullName>GILL</fullName>
                </value>
                <value>
                    <fullName>Hydropower</fullName>
                </value>
                <value>
                    <fullName>Instalação</fullName>
                </value>
                <value>
                    <fullName>Laser Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>br_Quantidade__c</fullName>
        <description>Quantidade de Lubrificadores</description>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Account_and_Opportunity_Name__c</fullName>
        <formula>Account.Name&amp;&quot;: &quot;&amp; Name</formula>
        <label>Account and Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Trading_company__c</fullName>
        <label>Agent / Trading company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Amount_Lost__c</fullName>
        <formula>IF( TEXT(StageName)=&quot;Closed Lost&quot;,Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ptt_Case_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>C-00008407 https://pruftechnik.my.salesforce.com/500D000000UeXPE</description>
        <label>Related to Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Created_Date_Year__c</fullName>
        <description>Year of created Opportunity.</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Created in Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Created_form_Lead__c</fullName>
        <description>This field is used by validation rules for condition check if record was created during lead conversion.</description>
        <label>Created form Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Delivery_Order_Date__c</fullName>
        <label>Delivery Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Delivery_Order_Number__c</fullName>
        <label>Delivery Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Estimated_Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Has3561__c</fullName>
        <label>Has3561?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Name_Copy2__c</field>
            <operation>contains</operation>
            <value>3561</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Invoice_Paid_Date__c</fullName>
        <inlineHelpText>Date when invoice was paid by customer.</inlineHelpText>
        <label>Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_MM_Account_Code_and_City__c</fullName>
        <formula>Account.BillingPostalCode  &amp; &quot; &quot; &amp; Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code and City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_MM_Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_MM_Account_street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_MM_Contact_Salutation__c</fullName>
        <formula>sf42_gl_Contact__r.ptt_gl_Letter_Salutation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Opp_has_moved_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many time the Opp Close Date has moved.</inlineHelpText>
        <label>Opp has moved #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Opp_has_moved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp has moved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Opp_has_moved_cause__c</fullName>
        <label>Opp has moved cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Opp_is_closed_with_date_in_future__c</fullName>
        <description>This formula check if opportunity is closed and has close date in future which is not allowed.</description>
        <formula>IF(( IsClosed = TRUE  &amp;&amp; ( CloseDate &gt;  DATEVALUE(LastModifiedDate) )), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <label>Opp is closed with date in future</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_PL_Service_Type__c</fullName>
        <label>PL Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product IVS</fullName>
                </value>
                <value>
                    <fullName>Product Shinkawa</fullName>
                </value>
                <value>
                    <fullName>Service - Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Service - Geometric</fullName>
                </value>
                <value>
                    <fullName>Service - LTA</fullName>
                </value>
                <value>
                    <fullName>Service - Paralign</fullName>
                </value>
                <value>
                    <fullName>Service - Turbine Foreign</fullName>
                </value>
                <value>
                    <fullName>Service - Turbine Poland</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Inne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Product_Group__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALES ALI</fullName>
                </value>
                <value>
                    <fullName>SALES ALI - RENTAL</fullName>
                </value>
                <value>
                    <fullName>SALES CM</fullName>
                </value>
                <value>
                    <fullName>SALES CM ONLINE</fullName>
                </value>
                <value>
                    <fullName>SALES CM - RENTAL</fullName>
                </value>
                <value>
                    <fullName>SALES NDT</fullName>
                </value>
                <value>
                    <fullName>SALES NDT - RENTAL</fullName>
                </value>
                <value>
                    <fullName>SALES MACHINERY SERVICE ALI</fullName>
                </value>
                <value>
                    <fullName>SALES MACHINERY SERVICE CM</fullName>
                </value>
                <value>
                    <fullName>SALES MACHINERY SERVICE CM ONLINE</fullName>
                </value>
                <value>
                    <fullName>SALES MACHINERY SERVICE NDT</fullName>
                </value>
                <value>
                    <fullName>SALES OTHER PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>SALES PARALIGN SERVICE</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT CALIBRATION ALI</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT CALIBRATION CM</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT CALIBRATION NDT</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT REPAIR ALI</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT REPAIR CM</fullName>
                </value>
                <value>
                    <fullName>SALES PRODUCT REPAIR NDT</fullName>
                </value>
                <value>
                    <fullName>SALES TRAINING ALI</fullName>
                </value>
                <value>
                    <fullName>SALES TRAINING CM</fullName>
                </value>
                <value>
                    <fullName>SALES TRAINING NDT</fullName>
                </value>
                <value>
                    <fullName>ALI SALES OTHER  (FREIGHT, INSURANCE ETC.)</fullName>
                </value>
                <value>
                    <fullName>ALI SALES OTHER SERVICE</fullName>
                </value>
                <value>
                    <fullName>CM SALES OTHER  (FREIGHT, INSURANCE ETC.)</fullName>
                </value>
                <value>
                    <fullName>CM SALES OTHER SERVICE</fullName>
                </value>
                <value>
                    <fullName>NDT SALES OTHER (FREIGHT, INSURANCE ETC.)</fullName>
                </value>
                <value>
                    <fullName>NDT SALES OTHER SERVICE</fullName>
                </value>
                <value>
                    <fullName>SALES OTHER PRODUCTS ALI</fullName>
                </value>
                <value>
                    <fullName>SALES OTHER PRODUCTS CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>sf42_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Quotation_sent_date__c</fullName>
        <inlineHelpText>Show the date when Quotation Sent check box was checked.</inlineHelpText>
        <label>Quotation sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_SAP_Order_Number__c</fullName>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Sector__c</fullName>
        <description>Sector name based on Product Type.
This field was created to use it in reports for grouping by sector because it is not possible to group by all checkboxes ALI, CM, NDT at one time.</description>
        <formula>IF(BEGINS( TEXT(Product_Type__c) , &quot;ALI - Service&quot;), &quot;Service&quot;,
IF(BEGINS( TEXT(Product_Type__c) , &quot;CM - Service&quot;), &quot;Service&quot;,
IF(BEGINS( TEXT(Product_Type__c) , &quot;NDT - Service&quot;), &quot;Service&quot;,
IF(BEGINS( TEXT(Product_Type__c) , &quot;ALI&quot;), &quot;ALI&quot;,
IF(BEGINS(TEXT(Product_Type__c) , &quot;CM&quot;), &quot;CM&quot;,
IF(BEGINS(TEXT(Product_Type__c) , &quot;NDT&quot;), &quot;NDT&quot;, &quot;&quot;
) 
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Service_product_type__c</fullName>
        <label>Service Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cardan Shaft 1</fullName>
                </value>
                <value>
                    <fullName>Cardan Shaft 2</fullName>
                </value>
                <value>
                    <fullName>Compact Sliding Brackets ALI 2.112 Set</fullName>
                </value>
                <value>
                    <fullName>Dial Indicator</fullName>
                </value>
                <value>
                    <fullName>INCLINEO</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Ultra 1</fullName>
                </value>
                <value>
                    <fullName>PARALIGN 08</fullName>
                </value>
                <value>
                    <fullName>PARALIGN 09</fullName>
                </value>
                <value>
                    <fullName>PARALIGN 19</fullName>
                </value>
                <value>
                    <fullName>PARALIGN 23</fullName>
                </value>
                <value>
                    <fullName>PARALIGN XX</fullName>
                </value>
                <value>
                    <fullName>Reporting Service</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN iS</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Ultra 1</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment Training Rig</fullName>
                </value>
                <value>
                    <fullName>Shims</fullName>
                </value>
                <value>
                    <fullName>Sliding Bracket ALI 2.230</fullName>
                </value>
                <value>
                    <fullName>Straightness Bracket</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Tripod &amp; Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_gl_PO_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purchase Orders has been received.</description>
        <inlineHelpText>Check this field when Purchase Orders has been received.</inlineHelpText>
        <label>PO Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_products_quantity__c</fullName>
        <description>The number of Products included for opportunity.</description>
        <inlineHelpText>The number of Products included for opportunity.</inlineHelpText>
        <label>Products quantity</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sUniversalID__c</fullName>
        <externalId>true</externalId>
        <label>IsUniversalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Comment_Lost__c</fullName>
        <label>Comment Won / Lost</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Competitor_Lost_Reason__c</fullName>
        <inlineHelpText>Before closing this opportunity please select a reason.</inlineHelpText>
        <label>Competitor Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sf42_Reason_Lost__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Delivery Time</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Notes_Migration_ID__c</fullName>
        <label>Notes Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Only for PO to 3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Main_Competitor__c</fullName>
        <label>CA Main Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALI - ACOEM AB (Fixturlaser)</fullName>
                </value>
                <value>
                    <fullName>ALI - Competitor</fullName>
                </value>
                <value>
                    <fullName>ALI - Damalini</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - BTA</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 4x0 D 6x0</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 550 Extreme E 910</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - D 5x0 D 800</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - E420</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - E530</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - E540</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy Laser - E 710</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - Geo</fullName>
                </value>
                <value>
                    <fullName>ALI - Easy-Laser - Wind</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG - EQUILIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - FAG - Top Laser</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - DIRIGO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - EVO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - EXIGO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - GO</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - Go Basic</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - Go Pro</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - Laser Kit</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - NXA</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - NXA Geo</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - NXA Wind</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - PAT</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - UPAD</fullName>
                </value>
                <value>
                    <fullName>ALI - Fixturlaser - XA</fullName>
                </value>
                <value>
                    <fullName>ALI - GLOi AB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Order_Confirmation_No__c</fullName>
        <label>CA Order Confirmation No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Potential_FollowOn__c</fullName>
        <label>CA Potential FollowOn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Purchase_Order_No__c</fullName>
        <label>CA Purchase Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Quotation_No__c</fullName>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Quotation No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Quote_Competitor__c</fullName>
        <label>CA Quote from Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Aquired_by__c</fullName>
        <label>Aquired by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bestandskunde</fullName>
                </value>
                <value>
                    <fullName>Messekontakt</fullName>
                </value>
                <value>
                    <fullName>Kundenanfrage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Due_Date_moved__c</fullName>
        <label>Previous Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Expected_Turnover__c</fullName>
        <label>Expected Turnover</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Turnover_moved__c</fullName>
        <label>Turnover moved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>By default this list is limited to Account contacts&apos;.
You can see all results by clicking on &quot;Show all results&quot; below.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities.</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Trading_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent / Trading Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities as Trading Company</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Application__c</fullName>
        <label>JP Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welded Tube</fullName>
                </value>
                <value>
                    <fullName>seamless Tube</fullName>
                </value>
                <value>
                    <fullName>extruded Tube</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>black bar</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Delivery_Date__c</fullName>
        <label>JP Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Division__c</fullName>
        <label>JP Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Invoice_Date__c</fullName>
        <inlineHelpText>Date when Invoice was created.</inlineHelpText>
        <label>Invoice Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Invoice_Number__c</fullName>
        <inlineHelpText>Invoice number from accounting software.</inlineHelpText>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Order_Date__c</fullName>
        <label>JP Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Order_Number__c</fullName>
        <label>JP Order Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Quotation_Number_Auto__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>JP Quotation Number Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Quotation_Number_Old__c</fullName>
        <label>JP Quotation Number OLD</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Quotation_Number__c</fullName>
        <formula>BLANKVALUE( sf42_jp_Quotation_Number_Old__c ,  sf42_jp_Quotation_Number_Auto__c )</formula>
        <label>Quotation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Quotation_Number_del__c</fullName>
        <label>del_JP Quotation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Main_Competitor__c</fullName>
        <label>SG Main Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commtest</fullName>
                </value>
                <value>
                    <fullName>CSI</fullName>
                </value>
                <value>
                    <fullName>Damalini</fullName>
                </value>
                <value>
                    <fullName>Fixture- other</fullName>
                </value>
                <value>
                    <fullName>Fixture - XA</fullName>
                </value>
                <value>
                    <fullName>Other Vibration manufacturer</fullName>
                </value>
                <value>
                    <fullName>PARALIGN - lack of knowledge</fullName>
                </value>
                <value>
                    <fullName>PARALIGN - no budget</fullName>
                </value>
                <value>
                    <fullName>PARALIGN - optical systems</fullName>
                </value>
                <value>
                    <fullName>Rockwell</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment - lack of knowledge</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment - no budget</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment - use of dial gauges</fullName>
                </value>
                <value>
                    <fullName>SKF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Purchase_Order_No__c</fullName>
        <label>Purchase Order No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Quotation_Ref_No__c</fullName>
        <description>Can be removed after 2012-06-01</description>
        <label>SG Quotation Ref No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Quote_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG Quote Competitor</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>